# hosting_for_shabat

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
Backend/: .env.example  README.md  pyproject.toml  requirements.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 02e8ddbe44b0_add_profile_fields.py  04af2f426d6b_add_is_direct_request_to_guest_posts.py  1820d650ee55_initial_migrations.py  19f0819d1d0a_add_host_availability_tables.py  40a52a63125f_add_date_range_to_guest_posts.py  c10446bb3eca_add_messages_table.py  c976e11f95b3_add_is_read_to_messages.py  e7b4315a78f6_add_is_anonymous_to_guest_posts.py  e97f0f5eddfc_add_hostguestblock_table_and_rejection_.py  ef23f8a2ca54_add_verification_fields.py
Backend/app/: main.py
Backend/app/agent/: __init__.py  prompts.py  services.py
Backend/app/core/: config.py
Backend/app/database/: base.py  session.py
Backend/app/database/models/: __init__.py  availability.py  block.py  listing.py  match.py  message.py  post.py  profile.py  user.py
Backend/app/features/admin/: router.py  schemas.py
Backend/app/features/auth/: router.py  schemas.py  services.py
Backend/app/features/availability/: __init__.py  router.py  schemas.py  services.py
Backend/app/features/bookings/: router.py  schemas.py
Backend/app/features/chat/: router.py  schemas.py
Backend/app/features/listings/: router.py  schemas.py
Backend/app/features/notifications/: router.py
Backend/app/features/panic/: router.py
Backend/app/schemas/: Profile.py  Requests.py  Review.py  User_Auth.py
Frontend/: index.html  (+3 more)
(+135 files in other folders)
