[project]
name = "hosting-for-shabat-backend"
version = "0.1.0"
description = "Backend for Shabbat Hosting Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.28",
    "pgvector>=0.2.5",
    "alembic>=1.13.1",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "psycopg2-binary>=2.9.9",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.2",
    "passlib[bcrypt]>=1.7.4",
    "openai>=2.45.0",
    "httpx>=0.27.0",
    "langgraph>=1.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

